--- a/src/html/index.html
+++ b/src/html/index.html
@@ -69,7 +69,7 @@
             <span>热门推荐</span>
             <ul>
               <li>
-                <a href=""><img src="../img/TV-01.jpg" alt=""></a>
+                <a href=""><img src="../img/bx-01.jpg" alt=""></a>
                 <p><a href="">v不哈飞机噶就发给反馈</a></p>
                 <p>￥6899.00</p>
               </li>
@@ -85,7 +85,7 @@
             <span>热门推荐</span>
             <ul>
               <li>
-                <a href=""><img src="../img/TV-01.jpg" alt=""></a>
+                <a href=""><img src="../img/kt-01.jpg" alt=""></a>
                 <p><a href="">v不哈飞机噶就发给反馈</a></p>
                 <p>￥6899.00</p>
               </li>
@@ -369,7 +369,7 @@
         </div>
 
         <div class="text-bot">
-          <a href=""><img src="../img/b-01.jpg" alt=""></a>
+          <a href=""><img src="../img/c-01.jpg" alt=""></a>
         </div>
       </div>
       <!-- 冰洗展区 -->
@@ -386,7 +386,7 @@
         </div>
 
         <div class="text-bot">
-          <a href=""><img src="../img/b-01.jpg" alt=""></a>
+          <a href=""><img src="../img/d-01.jpg" alt=""></a>
         </div>
       </div>
       <!-- 生活家电 -->
@@ -404,7 +404,7 @@
         </div>
 
         <div class="text-bot">
-          <a href=""><img src="../img/b-01.jpg" alt=""></a>
+          <a href=""><img src="../img/e-01.jpg" alt=""></a>
         </div>
       </div>
       <!-- 周边产品 -->
@@ -416,7 +416,7 @@
         </div>
 
         <div class="text-bot">
-          <a href=""><img src="../img/b-01.jpg" alt=""></a>
+          <a href=""><img src="../img/f-01.jpg" alt=""></a>
         </div>
       </div>
     </div>
