--- a/src/html/enter.html
+++ b/src/html/enter.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <script src="../js/require.js" data-main="../js/main.enter.js"></script>
     <title>登入长虹</title>
     <link rel="stylesheet" href="../style/enter.css">
     <link rel="stylesheet" href="../font/iconfont.css">
@@ -26,18 +28,18 @@
         <div class="top">
             <div class="top-title">
                 <div>
-                    <a href="" class="active">账号密码登入</a>
-                    <a href="">手机短信登入</a>
+                    <a href="#" class="active">账号密码登入</a>
+                    <a href="#">手机短信登入</a>
                 </div>
                 <div>
                     <div class="text top-left ">
                         <div>
                             <span class="iconfont icongeren"></span>
-                            <input type="text" name="" id="" placeholder="手机 / 邮箱 / 用户名">
+                            <input type="text" name="ph" id="ph" placeholder="手机 / 邮箱 / 用户名">
                         </div>
                         <div>
                             <span class="iconfont iconRectangle"></span>
-                            <input type="text" name="" id="" placeholder="密码">
+                            <input type="password" name="pass" id="pass" placeholder="密码">
                         </div>
                     </div>
 
@@ -62,8 +64,8 @@
         </div>
 
         <div class="bot">
-            <p><a href="">登入</a></p>
-            <p><span><a href="">注册</a> | <a href="">忘记密码咯</a></span></p>
+            <p><a href="#" class="userEnter">登入</a></p>
+            <p><span><a href="enroll.html">注册</a> | <a href="">忘记密码咯</a></span></p>
             <ul>
                 <div></div>
                 <div>其他登入方式</div>
