--- a/src/html/details.html
+++ b/src/html/details.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>商品详情</title>
+    <script src="../js/require.js" data-main="../js/main.details"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/details.css">
     <link rel="stylesheet" href="../font/iconfont.css">
-    <script src="../js/jquery.min.js"></script>
-    <script src="../js/details.js"></script>
+
 </head>
 
 <body>
@@ -38,7 +39,7 @@
     <nav>
         <div class="wrapper">
             <!-- logo -->
-            <a href="#" class="logo">
+            <a href="index.html" class="logo">
                 <img src="../img/logo.png" alt="">
             </a>
             <span class="glyphicon glyphicon-th-list"></span>
@@ -165,7 +166,7 @@
                         <span>热门推荐</span>
                         <ul>
                             <li>
-                                <a href=""><img src="../img/TV-01.jpg" alt=""></a>
+                                <a href="details.html"><img src="../img/TV-01.jpg" alt=""></a>
                                 <p><a href="">v不哈飞机噶就发给反馈</a></p>
                                 <p>￥6899.00</p>
                             </li>
@@ -228,9 +229,78 @@
                         </ul>
                     </ul>
                 </div>
-                <div><a href="">家用电器</a></div>
-                <div><a href="">显示器</a></div>
-                <div><a href="">服务</a></div>
+                <div><a href="">家用电器</a>
+                    <ul>
+                        <span>热门推荐</span>
+                        <ul>
+                            <li>
+                                <a href="details.html"><img src="../img/jd-01.jpg" alt=""></a>
+                                <p><a href="">v不哈飞机噶就发给反馈</a></p>
+                                <p>￥6899.00</p>
+                            </li>
+
+                            <li>
+                                <a href="details.html"><img src="../img/jd-02.jpg" alt=""></a>
+                                <p><a href="">v不哈飞机噶就发给反馈</a></p>
+                                <p>￥6899.00</p>
+                            </li>
+                            <li>
+                                <a href=""></a>
+                            </li>
+                            <li>
+                                <a href=""></a>
+                            </li>
+                        </ul>
+                    </ul>
+                </div>
+                <div><a href="">显示器</a>
+                    <ul>
+                        <span>热门推荐</span>
+                        <ul>
+                            <li>
+                                <a href="details.html"><img src="../img/kt-02.jpg" alt=""></a>
+                                <p><a href="">v不哈飞机噶就发给反馈</a></p>
+                                <p>￥6899.00</p>
+                            </li>
+
+                            <li>
+                                <a href="details.html"><img src="../img/kt-04.jpg" alt=""></a>
+                                <p><a href="">v不哈飞机噶就发给反馈</a></p>
+                                <p>￥6899.00</p>
+                            </li>
+                            <li>
+                                <a href=""></a>
+                            </li>
+                            <li>
+                                <a href=""></a>
+                            </li>
+                        </ul>
+                    </ul>
+                </div>
+                <div><a href="">服务</a>
+                    <ul>
+                        <span>服务支持</span>
+                        <ul>
+                            <li>
+                                <a href="details.html"><img src="../img/fw-02.png" alt=""></a>
+                                <p><a href="">服务政策</a></p>
+
+                            </li>
+
+                            <li>
+                                <a href="details.html"><img src="../img/fw-04.png" alt=""></a>
+                                <p><a href="">常见问题</a></p>
+
+                            </li>
+                            <li>
+                                <a href=""></a>
+                            </li>
+                            <li>
+                                <a href=""></a>
+                            </li>
+                        </ul>
+                    </ul>
+                </div>
             </div>
             <!-- 搜索框 -->
             <div class="sea">
@@ -255,14 +325,14 @@
             <div class="details-main-top">
                 <div>
                     <div class="big big-left">
-                        <img src="../img/big-1.jpg" alt="">
+
                         <span></span>
                     </div>
 
                     <div class="move-box"></div>
 
                     <div class="big big-rigth">
-                        <img src="../img/big-1.jpg" alt="">
+
                     </div>
                     <div class="sm">
                         <span class="glyphicon glyphicon-chevron-left"></span>
@@ -278,18 +348,7 @@
 
                 <div class="details-box">
                     <div>
-                        <ul>
-                            <div>
-                                <p>长虹（CHANGHONG）3P一级能效变频圆柱冷暖立柜式空调白色KFR-72LW/DFR1+A1</p>
-                                <span>一级能效 节能好颜</span>
-                            </div>
-                            <a href="">加入对比</a>
-                        </ul>
-                        <ul>
-                            <span>
-                            ￥6999.00
-                        </span>
-                        </ul>
+
                         <ul>
                             <p>
                                 <span>配送地址:</span>
@@ -300,15 +359,15 @@
                         <ul>
                             <p>
                                 <span>商品数量：</span>
-                                <span>
-                                <s>-</s>
-                                <input type="text" value="1">
-                                <s>+</s>
-                            </span>
+                                <span class="shoping">
+                                    <span>-</span>
+                                <input type="text" value="1" class="shopNum">
+                                <span>+</span>
+                                </span>
                             </p>
-                            <p>
-                                <span><a href="">立即购买</a></span>
-                                <span><a href="">加入购物车</a></span>
+                            <p class="addCar">
+                                <span><a href="shopCar.html">立即购买</a></span>
+                                <span>加入购物车</span>
                             </p>
                         </ul>
                         <p>
@@ -316,11 +375,11 @@
                             <span class="iconfont iconshoucang1"><a href="">收藏</a></span>
                             <span class="iconfont iconfenxiang1"><a href="">分享</a></span>
                             <span><a href="">
-                            <s class="iconfont iconweibo " style="color: rgb(223, 69, 22);"></s>
-                            <s class="iconfont iconweixin" style="color: rgb(73, 211, 18);"></s>
-                            <s class="iconfont iconzhifubao" style="color: rgb(22, 133, 223);"></s>
-                            <s class="iconfont iconQQ" style="color: rgb(22, 183, 223);"></s>
-                        </a></span>
+                                    <s class="iconfont iconweibo " style="color: rgb(223, 69, 22);"></s>
+                                    <s class="iconfont iconweixin" style="color: rgb(73, 211, 18);"></s>
+                                    <s class="iconfont iconzhifubao" style="color: rgb(22, 133, 223);"></s>
+                                    <s class="iconfont iconQQ" style="color: rgb(22, 183, 223);"></s>
+                                </a></span>
                         </p>
                     </div>
                 </div>
@@ -356,7 +415,7 @@
             </div>
             <!-- 服务 -->
             <div class="cp">
-                <img src="../img/wf-1.jpg" alt="">
+
             </div>
             <!-- 配件 -->
             <div class="cp">
@@ -369,9 +428,9 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script> -->
 </body>
 
 </html>
