--- a/src/html/details.html
+++ b/src/html/details.html
@@ -26,7 +26,8 @@
                 <li><a href="#"><span>English</span></a></li>
             </ul>
             <ul class="head-rigth">
-                <li><a href="enter.html">登入</a><span>|</span><a href="enroll.html" target="_blank">注册</a>
+                <li id="zt">
+                    <a href="enter.html">登入</a><span>|</span><a href="enroll.html" target="_blank">注册</a>
                 </li>
                 <li><a href="#"><span class="glyphicon glyphicon-user"><span>我的长虹</span></span></a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-gift"><span>虹创有品</span></span></a></li>
@@ -366,7 +367,7 @@
                                 </span>
                             </p>
                             <p class="addCar">
-                                <span><a href="shopCar.html">立即购买</a></span>
+                                <span><a href="enter.html" class="enterShop">立即购买</a></span>
                                 <span>加入购物车</span>
                             </p>
                         </ul>
