--- a/src/html/index.html
+++ b/src/html/index.html
@@ -42,7 +42,7 @@
                 </li>
                 <li><a href="#"><span class="glyphicon glyphicon-user"><span>我的长虹</span></span></a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-gift"><span>虹创有品</span></span></a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"><span>购物车</span></span></a></li>
+                <li><a href="enter.html" class="topShop"><span class="glyphicon glyphicon-shopping-cart"><span>购物车</span></span></a></li>
 
             </ul>
         </div>
@@ -621,7 +621,7 @@
         <span value="sh">生活</span>
     </div>
     <div class="fixed-nav-right">
-        <a href=""><span class=" iconfont iconicon_cart"></span></a><br>
+        <a href="enter.html" class="fixedShop"><span class=" iconfont iconicon_cart"></span></a><br>
         <a href=""><span class="iconfont iconerji"></span></a><br>
         <a href="#" class="fixed-nav-right-two"><span class="glyphicon glyphicon-chevron-up"></span></a>
     </div>
