--- a/src/html/shopCar.html
+++ b/src/html/shopCar.html
@@ -54,14 +54,19 @@
                 <input type="checkbox" id="all">
                 <label for="all">全选</label>
             </p>
+            <div class="shopBox">
 
+            </div>
         </div>
         <div class="allPrice">
             <div class="wrapper">
                 <div>
-                    <input type="checkbox" class="del" disabled>
-                    <label for="del">重选</label>
+                    <input type="checkbox" id="del">
+                    <label for="del">清空</label>
                 </div>
+
+
+
                 <div>
                     <span>总计:</span><span class="price">￥00.00</span>
                     <span>下单支付</span>
